Depend on OCaml>=4.08, add .ocamlformat

--- a/mbr-format.opam
+++ b/mbr-format.opam
@@ -10,7 +10,7 @@ build: [
   ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.08.0"}
   "dune"
   "lwt"
   "cstruct" {>= "6.0.0"}
