--- a/mbr-format.opam
+++ b/mbr-format.opam
@@ -15,5 +15,7 @@ depends: [
   "lwt"
   "cstruct" {>= "6.0.0"}
   "ppx_cstruct"
+  "fmt" {with-test}
+  "alcotest" {with-test}
 ]
 synopsis: "A simple library for manipulating Master Boot Records"
