--- a/mbr-format.opam
+++ b/mbr-format.opam
@@ -14,7 +14,8 @@ depends: [
   "ocaml" {>= "4.08.0"}
   "dune" {>= "3.4.0"}
   "lwt"
-  "cstruct" {>= "6.2.0"}
+  "cstruct" {>= "6.0.0"}
+  "cstruct" {dev & >= "6.2.0"}
   "ppx_cstruct"
   "fmt" {with-test}
   "alcotest" {with-test}
