--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (names mbr_inspect read_partition)
+ (names mbr_inspect read_partition write_partition)
  (libraries mbr cstruct cmdliner))
