--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,3 @@
 (executables
- (names mbr_inspect read_partition write_partition resize_partition)
+ (names mbr_inspect read_partition write_partition resize_partition create_mbr_disk)
  (libraries mbr cstruct cmdliner unix))
