Do not call this library simple
It is different from person to person what is a 'simple' library. Thus
it doesn't convey much at best, and at worst it can be very demotivating
if you struggle understanding the 'simple' library.

--- a/mbr-format.opam
+++ b/mbr-format.opam
@@ -22,4 +22,4 @@ depends: [
 conflicts: [
   "result" {< "1.5"}
 ]
-synopsis: "A simple library for manipulating Master Boot Records"
+synopsis: "A library for manipulating Master Boot Records"
