--- a/mbr-format.opam
+++ b/mbr-format.opam
@@ -22,3 +22,4 @@ conflicts: [
   "result" {< "1.5"}
 ]
 synopsis: "A library for manipulating Master Boot Records"
+x-maintenance-intent: [ "(latest)" ]
